# stars-ultranova-web

./: .gitignore  Makefile  README.md  project.env  pyproject.toml  requirements.txt  start.sh  stop.sh  test_spectral.py
.claude/: CLAUDE.md  JOURNAL.md
.claude/plan/: CHECKLIST.md  CONTEXT_SUMMARY.md  SCRATCHPAD.md
backend/: __init__.py  config.py  main.py
backend/ai/: __init__.py  abstract_ai.py  default_ai.py  default_ai_planner.py  default_fleet_ai.py  default_planet_ai.py
backend/api/: __init__.py  websocket.py
backend/api/routes/: __init__.py  designs.py  fleets.py  games.py  stars.py
backend/core/: __init__.py  globals.py
backend/core/commands/: __init__.py  base.py  design.py  production.py  research.py  waypoint.py
backend/core/components/: __init__.py  component.py  engine.py  (+4 more)
backend/data/: components.xml
backend/persistence/: __init__.py  database.py  game_repository.py
backend/server/: __init__.py  server_data.py  turn_generator.py
backend/services/: __init__.py  galaxy_generator.py  game_manager.py
docs/: NEBULA_RENDERING.md  README.md  STAR_GENERATION.md
frontend/: index.html
frontend/css/: main.css  stars-theme.css
frontend/js/: app.js
orig_game_screenshots/: ANALYSIS.md
scripts/: capture_planets.py  capture_screenshots.py
tests/: __init__.py
tests/regression/: test_integration.py  test_parity.py
tests/unit/: test_ai.py  test_api.py  test_battle_engine.py  test_cargo.py  test_commands.py  test_component_loader.py  test_nova_point.py  test_resources.py  test_ship_design.py  test_star.py  test_turn_generator.py
(+51 files in other folders)
